@@ -1,5 +1,9 @@
 0.19.11	UNRELEASED
 
+ IMPROVEMENTS
+
+ * Add support for short ids in parse_commit. (Jelmer Vernooĳ)
+
 0.19.10	2018-01-15
 
  IMPROVEMENTS
